fix: uncomment tags in items and make them always visible

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -555,29 +555,29 @@ body.is-white-text .global-button:not(.no-color),body.is-white-text .global-dyna
 }
 
 .loop-subtitle-title {
-   font-family: var(--font-family-one);
-   font-size: clamp(5.5rem, 6vw, 6.6rem);
-   font-weight: 300;
-   line-height: 1.25;
-   margin: 0;
-   letter-spacing: -0.996125px;
+   font-family: var(--font-family-one) !important;
+   font-size: clamp(5.5rem, 6vw, 6.6rem) !important;
+   font-weight: 300 !important;
+   line-height: 1.25 !important;
+   margin: 0 !important;
+   letter-spacing: -0.996125px !important;
 }
 
 .loop-subtitle-title span {
-   font-weight: 700;
+   font-weight: 700 !important;
 }
 
 /* Subtitle
    –––––––––––––––––––––––––––––––––––––––––––––––––––– */
 .global-subtitle {
-   font-size: clamp(1.6rem, 1.2vw + 1.2rem, 2rem);
-   font-weight: 400;
-   line-height: 1.1;
-   display: block;
-   margin: 0 0 1em;
-   letter-spacing: 0;
-   text-transform: none;
-   grid-column: span 6;
+   font-size: clamp(1.6rem, 1.2vw + 1.2rem, 2rem) !important;
+   font-weight: 400 !important;
+   line-height: 1.1 !important;
+   display: block !important;
+   margin: 0 0 1em !important;
+   letter-spacing: 0 !important;
+   text-transform: none !important;
+   grid-column: span 6 !important;
 }
 
 /* Link overlay
@@ -2094,19 +2094,19 @@ body.is-white-text .global-button:not(.no-color),body.is-white-text .global-dyna
    –––––––––––––––––––––––––––––––––––––––––––––––––––– */
 .item-image {
    margin-bottom: 1.8vh;
-   aspect-ratio: 4 / 3;
-   overflow: hidden;
-   display: block;
+   aspect-ratio: 4 / 3 !important;
+   overflow: hidden !important;
+   display: block !important;
    transition: transform .3s ease;
    will-change: transform;
 }
 
 .item-image picture,
 .item-image img {
-   width: 100%;
-   height: 100%;
-   display: block;
-   object-fit: cover;
+   width: 100% !important;
+   height: 100% !important;
+   display: block !important;
+   object-fit: cover !important;
 }
 
 .item-image:hover {
@@ -2447,7 +2447,7 @@ body.is-white-text .global-button:not(.no-color),body.is-white-text .global-dyna
    }
    
    .item.is-top.is-first .item-excerpt,
-   .item:not(.is-first) .item-tags {
+   .item.is-top.is-first .item-excerpt {
       display: none;
    }
 
